MySQL Connector/Python 8.0 - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2022, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.0.31
=======

- BUG#34283402: Binary data starting with 0x00 are returned as empty string
- BUG#28491115: Connector/Python crashes on 0 time value
- BUG#28295478: Align exception types raised by pure Python and c-ext
- BUG#27634910: Add warning count method to cursors

v8.0.30
=======

- WL#15212: Update collation mappings
- WL#15151: Increase to 88 characters per line
- WL#15137: Fix linting issues
- WL#15035: Enforce PEP 7 and PEP 8 coding style
- WL#14822: Refactor the authentication plugin mechanism
- WL#14815: Support OpenSSL 3.0
- BUG#34260344: Disallow empty strings in collection fields
- BUG#34231226: Generated classes do not work with the latest Protobuf
- BUG#34228442: Fix NO_BACKSLASH_ESCAPES SQL mode support in c-ext
- BUG#34223015: Invalidate the usage of non-compatible cursor types
- BUG#34127959: Add isolation level support in Django backend
- BUG#33923516: Allow tuple of dictionaries as "failover" argument
- BUG#28821983: Fix rounding errors for decimal values
- BUG#28295504: Disable SSL when using Unix socket connections

v8.0.29
=======

- WL#14860: Support FIDO authentication (c-ext)
- WL#14852: Align TLS option checking across connectors
- WL#14824: Remove Python 3.6 support
- WL#14679: Allow custom class for data type conversion in Django backend
- WL#14665: SSPI Kerberos authentication for Windows (pure-python)
- BUG#33861549: Replace SHOW VARIABLES inefficient statements
- BUG#33747585: Fix error when using an expression as a column without an alias
- BUG#33729842: Character set 'utf8mb3' support
- BUG#33481203: OverflowError for MySQL BIGINT on c-ext
- BUG#33203161: Exception is thrown on close connection with pooling
- BUG#30203754: Prepared stmt fails on cext with BIGINTS