@@ -12,6 +12,7 @@ v8.0.31
 =======
 
 - BUG#34283402: Binary data starting with 0x00 are returned as empty string
+- BUG#34217492: Exec of stored procedures with args fails when db prefix used
 - BUG#28491115: Connector/Python crashes on 0 time value
 - BUG#28295478: Align exception types raised by pure Python and c-ext
 - BUG#27634910: Add warning count method to cursors
